fixed album spacing

--- a/project3/style.css
+++ b/project3/style.css
@@ -22,7 +22,6 @@ body {
     grid-template-rows: repeat(8, 1fr);
     justify-content: space-between;
     font-family: Verdana, "Arial Narrow", Arial, sans-serif;
-
     max-height: 100vh;
 }
 
@@ -44,7 +43,7 @@ p {
 
 
 .menu {
-    grid-column: 5 / 9;
+    grid-column: 1 / -1;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -55,6 +54,7 @@ p {
 
 .menu li {
     font-size: 24px;
+    font-family: "Arial Narrow", Arial, sans-serif;
     text-decoration-line: underline;
     margin: 0 20px;
 }
@@ -70,10 +70,10 @@ p {
 }
 
 .album-container {
+    grid-column: 1 / -1;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-column: 1 / 12;
-    align-items: center;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
     justify-items: center;
 }
 
@@ -89,6 +89,11 @@ p {
     text-decoration-line: none;
     text-align: left;
     align-items: left;
+}
+
+.album .image {
+    width: 100%;
+    height: auto;
 }
 
 .news-container {
@@ -155,7 +160,8 @@ p {
     align-items: center;
  }
  .marquee-content {
-    font-size: 32px;
+    font-size: 28px;
+    font-family: "Arial Narrow", Arial, sans-serif;
     white-space: nowrap;
     padding: 0 2rem;
     align-items: center;
@@ -219,34 +225,19 @@ p {
     grid-row: 4 / 8;
 }
 
-#image1 {
-    grid-column: 2 / 5;
+#album1 {
+    grid-column: 1 / 3;
     grid-row: 2 / 4;
 }
 
-#image2 {
-    grid-column: 5 / 8;
+#album2 {
+    grid-column: 5 / 7;
     grid-row: 2 / 4;
 }
 
-#image3 {
-    grid-column: 8 / 11;
+#album3 {
+    grid-column: 9 / 11;
     grid-row: 2 / 4;
-}
-
-#image4 {
-    grid-column: 2 / 5;
-    grid-row: 5 / 7;
-}
-
-#image5 {
-    grid-column: 5 / 8;
-    grid-row: 5 / 7;
-}
-
-#image6 {
-    grid-column: 8 / 11;
-    grid-row: 5 / 7;
 }
 
 @media (max-width: 900px) {
